fix bug: infowindow always visible

--- a/modules/avca-google-map/assets/css/avca-google-map.css
+++ b/modules/avca-google-map/assets/css/avca-google-map.css
@@ -4,8 +4,8 @@
 	padding: 0;
 }
 .info-window-custom {
-	font-size: 16px;
+	font-size: 14px;
 }
 .info-window-default {
-	font-size: 16px;
+	font-size: 14px;
 }
